# 6502-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  W65C02S.h  alu.h  main.cpp  memory.cpp  memory.h
test/: 6502_cpp_alu.cpp  CMakeLists.txt
